--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Permission To Dance On Stage</title>
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -26,7 +27,9 @@
     </section>
 
     <footer>
-        <p>Desenvolvido por Endi Oliveira</p><a href=""><i class="fa-brands fa-github"></i></a>
+        <p>Desenvolvido por Endi Oliveira</p>
+        <a href="https://github.com/endioliveira/landingpagebts-" target="_blank"><i class="fa-brands fa-github"></i></a>
+        
         
     </footer>
 </body>
